@@ -10,6 +10,7 @@ namespace app\api\controller;
 
 use core\basic\Controller;
 use app\api\model\CmsModel;
+use core\basic\Url;
 
 class AboutController extends Controller
 {
@@ -29,13 +30,26 @@ class AboutController extends Controller
             
             // 读取数据
             if (! ! $data = $this->model->getAbout($acode, $scode)) {
+                
                 if ($data->outlink) {
-                    $data->link = $data->outlink;
+                    $data->apilink = $data->outlink;
                 } else {
-                    $data->link = url('/api/content/index/id/' . $data->id, false);
+                    $data->apilink = url('/api/content/index/id/' . $data->id, false);
                 }
+                
                 $data->likeslink = url('/home/Do/likes/id/' . $data->id, false);
                 $data->opposelink = url('/home/Do/oppose/id/' . $data->id, false);
+                
+                $urlname = $data->urlname ?: 'about';
+                $url_break_char = $this->config('url_break_char') ?: '_';
+                $url_rule_sort_suffix = $this->config('url_rule_sort_suffix') ? true : false;
+                
+                if ($data->sortfilename) {
+                    $data->contentlink = Url::home($data->sortfilename, $url_rule_sort_suffix);
+                } else {
+                    $data->contentlink = Url::home($urlname . $url_break_char . $data->scode, $url_rule_sort_suffix);
+                }
+                
                 $data->content = str_replace(STATIC_DIR . '/upload/', get_http_url() . STATIC_DIR . '/upload/', $data->content);
                 json(1, $data);
             } else {
