@@ -14,6 +14,9 @@ PbootCMS V2.0.6 build 2020-03-18
 7、新增后台内容列表每页显示数量选择；
 8、修复tags重复显示问题；
 9、新增config/route.php文件自定义二开路由支持；
+10、新增API内容列表返回自适应的内容网页链接地址contentlink；
+11、修复API内容API链接错误并修改参数为apilink；
+12、修复API留言及表单无法关闭功能问题；
 
 PbootCMS V2.0.5 build 2020-01-31
 1、优化前台404.html，并支持内容内{info}自适应提示文字；
